compiler/src/test/resources/golden/errors/suggest_type.dawn
fn f(s: Strig) -> Int = 0
