compiler/src/test/resources/golden/errors/suggest_type.err
error: unknown type: Strig
  --> suggest_type.dawn:1:9
  |
1 | fn f(s: Strig) -> Int = 0
  |         ^^^^^
  = hint: did you mean `String`?
